@@ -47,7 +47,7 @@ typedef struct _SCSIWMI_REQUEST_CONTEXT {
 #if ! (defined _GUID_DEFINED || defined GUID_DEFINED)
 #define GUID_DEFINED
 typedef struct _GUID {
-    unsigned long  Data1;
+    ULONG          Data1;
     unsigned short Data2;
     unsigned short Data3;
     unsigned char  Data4[ 8 ];
